--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tailwindcss/vite": "^4.2.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^25.3.0",
     "@types/react": "^18.3.18",
@@ -56,6 +57,7 @@
     "eslint-plugin-react-refresh": "^0.5.0",
     "fast-check": "^4.5.3",
     "globals": "^17.3.0",
+    "happy-dom": "^20.7.0",
     "jsdom": "^27.0.1",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4.2.0",
